[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/core/enemies/EnemyHP.tscn" type="PackedScene" id=1]
[ext_resource path="res://textures/enemies/chess/queen.png" type="Texture" id=2]
[ext_resource path="res://game/core/enemies/MoveTimer.gd" type="Script" id=3]
[ext_resource path="res://game/core/enemies/Queen.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 112.5 )

[node name="Queen" type="RigidBody2D" groups=["enemy"]]
mode = 1
gravity_scale = 0.0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, -36 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -2.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
script = ExtResource( 3 )

[node name="EnemyHPNode" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 125 )
width = 20

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="collision" from="." to="." method="_on_Queen_collision"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
